...
          name="DiscoverMeetings"
          component={DiscoverMeetingsScreen}
          options={({
            navigation,
          }: RootTabScreenProps<"DiscoverMeetings">) => ({
            title: "Meetings",
            tabBarTestID: "tab-meetings",

            tabBarIcon: ({ color }) => (
              <TabBarIcon name="users" color={color} />
            ),
          })}
        />
        <BottomTab.Screen
          name="ChatPreviews"
          component={ChatPreviewsScreen}
          options={() => ({
            title: "Chats",
            tabBarTestID: "tab-chats",
            tabBarIcon: ({ color }) => (
              <TabBarIcon testID="tab-bar-icon" name="comments" color={color} />
            ),
          })}
        />
        <BottomTab.Screen
...
