...
        />
      </View>
    );
  };

  return (
    <PaddedView testID="screen-discover-meetings">
      <View style={{ flex: 1 }}>
        <View style={{ height: 30, flexDirection: "row", marginBottom: 10 }}>
          <TouchableWithoutFeedback onPress={() => setIsModalVisible(true)}>
            <Ionicons name="md-location" style={styles.icon3} />
          </TouchableWithoutFeedback>
          <TouchableWithoutFeedback onPress={() => setIsModalVisible(true)}>
...

        <FAB
          style={styles.fab}
          label="New meeting"
          icon="plus"
          onPress={() => createmeeting("not")}
          testID="new-meeting-button"
        />
      </View>
    </PaddedView>
  );
}

...
