...
          <TextInput
            style={styles.input}
            label="Title"
            value={title.value}
            error={title.error}
            onChangeText={onTitleChange}
            testID="input-title"
          />
        </View>
        <View style={styles.inputRow5}>
          <FontAwesome name="calendar" style={styles.icon} />
          <Button
            labelStyle={{
...
                height: 50,
                borderWidth: 2,

                borderColor: theme.colors.accent,
                borderBottomLeftRadius: 50,
              }}
              testID="create"
              onPress={submitMeeting}
            >
              Create
            </Button>
          ) : (
            <Button
...
